[package]
name = "bonk"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caveman = { path = "../libcaveman" }
clap = { version = "4.4.11", features = ["derive"] }
hex = "0.4.3"
protobuf = "3.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
zstd = "0.13.0"
scorched = "0.4.5"
tokio = { version = "1.35.0", features = ["full"] }
rayon = "1.8.0"
reqwest = "0.11.22"
futures = "0.3.29"
