[package]
name = "flint"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "flint"
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'Blob',
    'BlobPropertyBag',
] }
caveman = { path = "../libcaveman" }
protobuf = "3.3.0"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
futures = "0.3.28"
zstd = { version = "0.12.4", default-features = false, features = ["wasm"] }
url = "2.4.1"
scorched = "0.2.8"

[profile.release]
opt-level = "z"
lto = true
