[package]
name = "caveman"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name="caveman"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.3.0"
rustc_version_runtime = "0.2.1"

[build-dependencies]
protobuf-codegen = "3.2.0"
